kubernetes/semaphore/mysql-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: semaphore
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: semaphore-mysql-pvc
