kubernetes/semaphore/semaphore-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore
  namespace: semaphore
spec:
  selector:
    matchLabels:
      app: semaphore
  template:
    metadata:
      labels:
        app: semaphore
    spec:
      containers:
      - name: semaphore
        image: semaphoreui/semaphore:latest
        ports:
        - containerPort: 3000
          name: http
        securityContext:
          runAsUser: 0
          runAsGroup: 0
        readinessProbe:
            httpGet:
              port: 3000
              path: /ping
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 3
        livenessProbe:
          httpGet:
            port: 3000
            path: /
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 3
        volumeMounts:
        - name: semaphore-pv
          mountPath: /inventory
        - name: semaphore-pv
          mountPath: /authorized-keys
        - name: semaphore-pv
          mountPath: /etc/semaphore
      volumes:
      - name: semaphore-pv
        persistentVolumeClaim:
          claimName: semaphore-pvc
