kubernetes/semaphore/semaphore-sv.yml
---
apiVersion: v1
kind: Service
metadata:
  name: semaphore
  namespace: semaphore
spec:
  selector:
    app: semaphore
  ports:
  - protocol: TCP
    targetPort: http
    port: 3000
