kubernetes/semaphore/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: semaphore
  namespace: semaphore
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.semaphore.your-domain.com`) # change to your domain
      kind: Rule
      services:
        - name: semaphore
          port: 3000
    - match: Host(`semaphore.your-domain.com`) # change to your domain
      kind: Rule
      services:
        - name: semaphore
          port: 3000
      middlewares:
        - name: default-headers
  tls:
    secretName: tls # change to your cert name
